# Sokol3DEngine

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: array.c  camera.c  camera.h  clipping.c  clipping.h  display.c  display.h  draw-numbers.c  draw-numbers.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  triangle.c  triangle.h  utils.c  utils.h  vector.c  vector.h
